# CG

YuanT_assignment01-3/scenes/: 07_Cylinder.json
YuanT_assignment01-3/src/apps/: 01_raytrace.cpp
YuanT_assignment01/src/common/: scene.cpp  scene.h
YuanTian_assignment03/src/apps/: 03_animate.cpp
assignment00/: CMakeLists.txt
assignment00/built/: CMakeCache.txt  cmake_install.cmake
assignment00/built/00_build.xcodeproj/: project.pbxproj
assignment00/src/apps/: 00_build.cpp  CMakeLists.txt
assignment01-build/: 01_raytrace.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
assignment01-build/src/: Makefile  cmake_install.cmake
assignment01/scenes/: 06_aa.json  monkey.json
assignment02/: readme.txt
assignment02-build/: 02_model.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
assignment02-build/src/: Makefile  cmake_install.cmake
assignment03-2-build/: CMakeCache.txt
assignment03-build/: 03_animate.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
assignment03-build/src/: Makefile  cmake_install.cmake
assignment04-build/: CMakeCache.txt
assignment04/scenes/: 011.json  01_textured.json  03_env.json  Thumbs.db  blurryReflection.json
final-project-build/: 01_raytrace.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
final-project-build/src/: Makefile  cmake_install.cmake
finalProject/Archive/: Run Instructions.txt
finalProject/scenes/: 03_plane.json
finalProject2/: Run Instructions.txt  readme.txt
finalProject2/scenes/: monkey.json
finalsubmission-1/: Assessment.rtf
modified_files/: 01_raytrace.cpp  intersect.h
(+192 files in other folders)
